--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -438,6 +438,7 @@ input[type="textarea"]:focus-visible,
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-height: 50vh;
   text-align: center;
 }
 
@@ -448,7 +449,6 @@ input[type="textarea"]:focus-visible,
   left: 0;
   width: 100%;
   height: 100%;
-  filter: blur(8px); 
   background-color: var(--color-overlay-secondary);
   z-index: 0;
 }
